Further Minor Tweaks to Diffsettings, still wip
Further changes pending outcome of feedback thread

--- a/Core/IRTweaks/Menus/CareerDifficultySettings.json
+++ b/Core/IRTweaks/Menus/CareerDifficultySettings.json
@@ -1120,7 +1120,7 @@
       "Options": [
         {
           "ID": "diff_PP_fast",
-          "Name": "Fast (350)",
+          "Name": "Very High (350)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": -0.2,
@@ -1134,7 +1134,7 @@
         },
         {
           "ID": "diff_PP_easy",
-          "Name": "Normal (300)",
+          "Name": "High (300)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": -0.1,
@@ -1148,7 +1148,7 @@
         },
         {
           "ID": "diff_PP_med",
-          "Name": "Slow (250)",
+          "Name": "Normal (250)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0,
@@ -1162,15 +1162,29 @@
         },
         {
           "ID": "diff_PP_hard",
-          "Name": "Very Slow (200)",
+          "Name": "Low (200)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
-          "CareerScoreModifier": 0,
+          "CareerScoreModifier": 0.1,
           "DifficultyConstants": [
             {
               "ConstantType": "Pilot",
               "ConstantName": "BaseXPGainPerMission",
               "ConstantValue": "200"
+            }
+          ]
+        },
+        {
+          "ID": "diff_PP_hard",
+          "Name": "Very Low (150)",
+          "TelemetryEventDesc": "",
+          "DifficultyValue": 0,
+          "CareerScoreModifier": 0.2,
+          "DifficultyConstants": [
+            {
+              "ConstantType": "Pilot",
+              "ConstantName": "BaseXPGainPerMission",
+              "ConstantValue": "150"
             }
           ]
         }
@@ -1235,7 +1249,7 @@
           "Name": "Very Slow",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
-          "CareerScoreModifier": 0,
+          "CareerScoreModifier": 0.15,
           "DifficultyConstants": [
             {
               "ConstantType": "Pilot",
@@ -1249,7 +1263,7 @@
           "Name": "Insane",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
-          "CareerScoreModifier": 0,
+          "CareerScoreModifier": 0.3,
           "DifficultyConstants": [
             {
               "ConstantType": "Pilot",
