update faction enum

--- a/DLC/RogueFlashPointModule/settings.json
+++ b/DLC/RogueFlashPointModule/settings.json
@@ -116,6 +116,22 @@
         "Marik3150",
         "RavenAlliance3150",
         "Steiner3150",
-        "TaurianConcordat3150"
+        "TaurianConcordat3150",
+        "faction_AlyinaMercantileLeague",
+        "faction_ArcRoyalLibertyCoalition",
+        "faction_ClanProtectorate",
+        "faction_FerrisCollective",
+        "faction_GalateanLeague",
+        "faction_Havens",
+        "faction_NewOberonConfederation",
+        "faction_RagnarokUnion",
+        "faction_RasalhagueDominion",
+        "faction_RepublicoftheBarrens",
+        "faction_RimTerritories",
+        "faction_ScorpionEmpire",
+        "faction_TamarPact",
+        "faction_TimbuktuCollective",
+        "faction_VesperMarches",
+        "faction_WolfEmpire"
     ]
 }
