--- a/ModTek/DoorStop/doorstop_config.ini
+++ b/ModTek/DoorStop/doorstop_config.ini
@@ -1,10 +1,12 @@
 [General]
 enabled=true
-target_assembly=Mods\ModTek\ModTekPreloader.dll
+target_assembly=Mods\ModTek\lib\ModTek.Preloader.dll
 # If true, Unity's output log is redirected to <current folder>\output_log.txt
 redirect_output_log=false
 # Options specific to running under Unity Mono runtime
 [UnityMono]
+# Overrides default Mono DLL search path
+dll_search_path_override=Mods\ModTek\lib\
 # If true, Mono debugger server will be enabled
 debug_enabled=false
 # When debug_enabled is true, specifies the address to use for the debugger server
