--- a/Core/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
+++ b/Core/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
@@ -7,6 +7,7 @@
     ],
     "BonusDescriptions": [
       "WpnAccuracy: +1",
+      "VariableDmg: 4",
       "Indirect",
       "NoAA",
       "IsMortar"
@@ -31,19 +32,19 @@
   "AmmoCategory": "MORTAR",
   "StartingAmmoCapacity": 0,
   "HeatGenerated": 3,
-  "Damage": 10,
+  "Damage": 6,
   "HeatDamage": 0,
   "Instability": 2,
-  "DamageVariance": 0,
+  "DamageVariance": 4,
   "AccuracyModifier": -1,
   "EvasivePipsIgnored": 0,
   "RefireModifier": 0,
   "OverheatedDamageMultiplier": 0,
   "EvasiveDamageMultiplier": 0,
   "CriticalChanceMultiplier": 1,
-  "APArmorShardsMod": 0.5,
-  "APMaxArmorThickness": 40,
-  "APCriticalChanceMultiplier": 0.1,
+  "APArmorShardsMod": 0.35,
+  "APMaxArmorThickness": 60,
+  "APCriticalChanceMultiplier": 0.25,
   "MissInCircle": true,
   "ShotsWhenFired": 1,
   "ProjectilesPerShot": 1,
