--- a/Core/Abilifier/EffectDataExtensions.json
+++ b/Core/Abilifier/EffectDataExtensions.json
@@ -1,9 +1,14 @@
 {
 	"VSPL-Accuracy": {
-		"TargetComponentTagMatch": [
-			"VSPL"
-		]
-	},
+        "TargetCollectionsForSearch": {
+            "Component": {
+                "MustMatchAll": false,
+                "TargetCollectionTagMatch": [
+                    "VSPL"
+                ]
+            }
+        }
+    },
 	"HAG-Accuracy": {
 		"TargetComponentTagMatch": [
 			"HAGR"
