Revert "VSPL Fix"
This reverts commit f8dbd0607667087bcc0dc2275fd18a1f42d7521f.

--- a/Core/Abilifier/EffectDataExtensions.json
+++ b/Core/Abilifier/EffectDataExtensions.json
@@ -1,14 +1,9 @@
 {
 	"VSPL-Accuracy": {
-        "TargetCollectionsForSearch": {
-            "Component": {
-                "MustMatchAll": false,
-                "TargetCollectionTagMatch": [
-                    "VSPL"
-                ]
-            }
-        }
-    },
+		"TargetComponentTagMatch": [
+			"VSPL"
+		]
+	},
 	"HAG-Accuracy": {
 		"TargetComponentTagMatch": [
 			"HAGR"
