--- a/Optionals/Superheavys/Base/vehicle/vehicledef_PROJECT_SECTARIAN_SUPERHEAVY_TANK.json
+++ b/Optionals/Superheavys/Base/vehicle/vehicledef_PROJECT_SECTARIAN_SUPERHEAVY_TANK.json
@@ -42,7 +42,8 @@
       "steiner",
       "TamarindAbbey",
       "tamarpact",
-      "taurianconcordat",
+         "taurianconcordat",
+      "TaurianConcordat3150",
       "timbuktucollective",
       "tortuga",
       "vespermarches",
