add quick skirmishes to DCE excludes
So doing the limited drop short missions that cap you at 6 units or 400 tons doesn't change your Company Rating.

--- a/Core/DropCostsEnhanced/settings.json
+++ b/Core/DropCostsEnhanced/settings.json
@@ -69,7 +69,9 @@
         "solaris_offseason_4x4freeforall_mech_2",
         "solaris_offseason_4x4freeforall_mech_5",
         "solaris_offseason_4x4freeforall_mech_8",
-        "ThreeWayBattle_PositionalBearing"
+        "ThreeWayBattle_PositionalBearing",
+        "SimpleBattle_Scramble_NEW",
+        "SimpleBattle_UrgentMatter_NEW"
   ],
   "difficultyCostModifiers" : [
   {
