Liao 3150 BA/Strat Ops hooks

--- a/Eras/DarkAge3131-/Base/mech/mechdef_phalanx_PX-D.json
+++ b/Eras/DarkAge3131-/Base/mech/mechdef_phalanx_PX-D.json
@@ -29,6 +29,7 @@
       "OrienteProtectorate",
       "RegulanFiefs",
       "republic",
+      "Liao3150",
       "RimCommonality",
       "ai_heat_yolo",
       "ai_dfa_low",
