--- a/Eras/Republic3081-3130/Base/mech/mechdef_phalanx_PX-B.json
+++ b/Eras/Republic3081-3130/Base/mech/mechdef_phalanx_PX-B.json
@@ -26,6 +26,7 @@
       "unit_rarity_weak",
       "TBAS_Disabled",
       "no_rp_tool",
+      "Liao3150",
       "duchyofandurien",
       "emeralddawn",
       "housekhulan",
