--- a/Eras/CivilWar3062-3067/Base/mech/mechdef_phalanx_PX-A.json
+++ b/Eras/CivilWar3062-3067/Base/mech/mechdef_phalanx_PX-A.json
@@ -26,6 +26,7 @@
       "TBAS_Disabled",
       "no_rp_tool",
       "Liao3150",
+      "Marik3150",
       "duchyofandurien",
       "marik",
       "ai_heat_yolo",
