--- a/Eras/DarkAge3131-/Base/mech/mechdef_phalanx_PX-D.json
+++ b/Eras/DarkAge3131-/Base/mech/mechdef_phalanx_PX-D.json
@@ -26,6 +26,7 @@
       "TBAS_Disabled",
       "no_rp_tool",
       "MarikStewart",
+      "Marik3150",
       "OrienteProtectorate",
       "RegulanFiefs",
       "republic",
