--- a/Eras/Republic3081-3130/Base/mech/mechdef_phalanx_PX-B.json
+++ b/Eras/Republic3081-3130/Base/mech/mechdef_phalanx_PX-B.json
@@ -27,6 +27,7 @@
       "TBAS_Disabled",
       "no_rp_tool",
       "Liao3150",
+      "DuchyOfAndurien3150",
       "Marik3150",
       "duchyofandurien",
       "emeralddawn",
