--- a/Eras/Republic3081-3130/Base/mech/mechdef_phalanx_PX-C.json
+++ b/Eras/Republic3081-3130/Base/mech/mechdef_phalanx_PX-C.json
@@ -27,6 +27,7 @@
       "no_rp_tool",
       "Liao3150",
       "Marik3150",
+      "DuchyOfAndurien3150",
       "duchyofandurien",
       "marik",
       "MarikStewart",
