--- a/Core/DropCostsEnhanced/settings.json
+++ b/Core/DropCostsEnhanced/settings.json
@@ -70,8 +70,10 @@
         "solaris_offseason_4x4freeforall_mech_5",
         "solaris_offseason_4x4freeforall_mech_8",
         "ThreeWayBattle_PositionalBearing",
+        "SimpleBattle_UrgentMatter_NEW",
+        "SimpleBattle_UrgentMatter_Alt_NEW",
         "SimpleBattle_Scramble_NEW",
-        "SimpleBattle_UrgentMatter_NEW"
+        "SimpleBattle_Scramble_Alt_NEW"
   ],
   "difficultyCostModifiers" : [
   {
