BA affinity groups

--- a/Core/MechAffinity/settings.json
+++ b/Core/MechAffinity/settings.json
@@ -25,6 +25,211 @@
     "treatDefaultsAsFixed": true,
     "affinityGroups": [
       {
+        "affinityId": "XiphosBA",
+        "assemblyGroup": [
+          "xiphos_10",
+          "xiphos_8"
+        ]
+      },
+      {
+        "affinityId": "TornadoBA",
+        "assemblyGroup": [
+          "tornado_1.6",
+          "tornado_2",
+          "tornado_2.4"
+        ]
+      },
+      {
+        "affinityId": "TortoiseiiBA",
+        "assemblyGroup": [
+          "tortoiseii_10",
+          "tortoiseii_8"
+        ]
+      },
+      {
+        "affinityId": "ThunderbirdBA",
+        "assemblyGroup": [
+          "thunderbird2ba_6",
+          "thunderbird2ba_7.5",
+          "thunderbirdba_6",
+          "thunderbirdba_7.5"
+        ]
+      },
+      {
+        "affinityId": "TaranisBA",
+        "assemblyGroup": [
+          "taranisba_6",
+          "taranisba_7.5"
+        ]
+      },
+      {
+        "affinityId": "SpectreBA",
+        "assemblyGroup": [
+          "spectre_3",
+          "spectre_3.75"
+        ]
+      },
+      {
+        "affinityId": "SimianBA",
+        "assemblyGroup": [
+          "simian_4",
+          "simian_5"
+        ]
+      },
+      {
+        "affinityId": "SeafoxBA",
+        "assemblyGroup": [
+          "seafox_3",
+          "seafox_3.75"
+        ]
+      },
+      {
+        "affinityId": "QuirinusBA",
+        "assemblyGroup": [
+          "quirinus_4",
+          "quirinus_5"
+        ]
+      },
+      {
+        "affinityId": "LeonidasBA",
+        "assemblyGroup": [
+          "leonidas_4",
+          "leonidas_5"
+        ]
+      },
+      {
+        "affinityId": "HauberkBA",
+        "assemblyGroup": [
+          "hauberk_8",
+          "hauberkii_8"
+        ]
+      },
+      {
+        "affinityId": "DragoonBA",
+        "assemblyGroup": [
+          "dragoonba_4",
+          "dragoonba_5"
+        ]
+      },
+      {
+        "affinityId": "CuchulainnBA",
+        "assemblyGroup": [
+          "cuchulainn_6",
+          "cuchulainn_7.5"
+        ]
+      },
+      {
+        "affinityId": "ConstableBA",
+        "assemblyGroup": [
+          "constable_3",
+          "constable_3.75"
+        ]
+      },
+      {
+        "affinityId": "CentaurBA",
+        "assemblyGroup": [
+          "centaurba_6",
+          "centaurba_7.5"
+        ]
+      },
+      {
+        "affinityId": "TrinityBA",
+        "assemblyGroup": [
+          "trinity_4",
+          "trinity_5"
+        ]
+      },
+      {
+        "affinityId": "DjinnBA",
+        "assemblyGroup": [
+          "djinn_3",
+          "djinn_4.5"
+        ]
+      },
+      {
+        "affinityId": "UndineBA",
+        "assemblyGroup": [
+          "undine_4",
+          "undine_5"
+        ]
+      },
+      {
+        "affinityId": "RoguebearBA",
+        "assemblyGroup": [
+          "roguebear_7.5",
+          "roguebearBAB_7.5"
+        ]
+      },
+      {
+        "affinityId": "NighthawkBA",
+        "assemblyGroup": [
+          "nighthawkba_1.6",
+          "nighthawkba_2",
+          "nighthawkba_2.4"
+        ]
+      },
+      {
+        "affinityId": "ClanBA",
+        "assemblyGroup": [
+          "clanba_4",
+          "clanba_5"
+        ]
+      },
+      {
+        "affinityId": "AchileusBA",
+        "assemblyGroup": [
+          "achileus_3",
+          "achileus_4.5"
+        ]
+      },
+      {
+        "affinityId": "PurifierBA",
+        "assemblyGroup": [
+          "PurifierAdaptive_4",
+          "PurifierAdaptive_5",
+          "PurifierAdaptive_6",
+          "PurifierTerra_4",
+          "PurifierTerra_5",
+          "PurifierTerra_6"
+        ]
+      },
+      {
+        "affinityId": "WraithBA",
+        "assemblyGroup": [
+          "WraithBA_5",
+          "WraithBA_4"
+        ]
+      },
+      {
+        "affinityId": "GDStandardBA",
+        "assemblyGroup": [
+          "GDStandard_4",
+          "GDStandard_5"
+        ]
+      },
+      {
+        "affinityId": "GnomeBA",
+        "assemblyGroup": [
+          "Gnome_7.5",
+          "Gnome_6"
+        ]
+      },
+      {
+        "affinityId": "CriderBA",
+        "assemblyGroup": [
+          "cyclo_6",
+          "cyclo_12"
+        ]
+      },
+      {
+        "affinityId": "SalamanderBA",
+        "assemblyGroup": [
+          "Salamander_BA_5",
+          "Salamander_BA_3",
+          "Salamander_BA_4"
+        ]
+      },
+      {
         "affinityId": "MarauderBA",
         "assemblyGroup": [
           "MarauderBA_7.5",
@@ -32,46 +237,58 @@
         ]
       },
       {
-        "affinityId": "ISStandard",
+        "affinityId": "LonginusBA",
+        "assemblyGroup": [
+          "Longinus_4",
+          "Longinus_6",
+          "LonginusC_5",
+          "Longinus_5"
+        ]
+      },
+      {
+        "affinityId": "ISStandardBA",
         "assemblyGroup": [
           "ISStandard_4",
           "ISStandard_5",
           "ISStandard_6",
-          "GDStandard_4",
-          "Longinus_4",
-          "Longinus_6"
+          "raiden_4",
+          "raidenii_4",
+          "cavalier_4",
+          "cavalier_5",
+          "cavalierii_4"
         ]
       },
       {
-        "affinityId": "Void",
+        "affinityId": "VoidBA",
         "assemblyGroup": [
           "Void_4",
           "Void_5"
         ]
       },
       {
-        "affinityId": "Ravager",
+        "affinityId": "RavagerBA",
         "assemblyGroup": [
           "Ravager_8",
           "Ravager_10"
         ]
       },
       {
-        "affinityId": "Phalanx",
+        "affinityId": "PhalanxBA",
         "assemblyGroup": [
           "Phalanx_6",
           "Phalanx_9"
         ]
       },
       {
-        "affinityId": "Kobold",
+        "affinityId": "KoboldBA",
         "assemblyGroup": [
           "Kobold_3",
-          "Kobold_4.5"
+          "Kobold_4.5",
+          "KoboldIIC_3.75"
         ]
       },
       {
-        "affinityId": "Toadie",
+        "affinityId": "ToadieBA",
         "assemblyGroup": [
           "Toadie_5",
           "Toadie2_5",
