Bonus Description fixes

--- a/Optionals/Flashpoints/TheDronesOfSyberia/Unique/Upgrade/Unique_Structure_Beastial_ConversionGear_GD.json
+++ b/Optionals/Flashpoints/TheDronesOfSyberia/Unique/Upgrade/Unique_Structure_Beastial_ConversionGear_GD.json
@@ -18,8 +18,7 @@
       "MeleeDamageTaken: -10%",
       "ArmorProtection: x1.1",
       "HeatPerTurn: +10",
-      "WordsWords: No Stability damage in tracked mode.",
-      "StructureFactor: -50%"
+      "WordsWords: No Stability damage in tracked mode."
     ],
     "ActivatableComponent": {
       "ButtonName": "Conversion Gear",
