Removed Flywheel, replaced with other addons

--- a/Optionals/Superheavys/Base/mech/mechdef_manx_MNX-965.json
+++ b/Optionals/Superheavys/Base/mech/mechdef_manx_MNX-965.json
@@ -44,7 +44,6 @@
     "Icon": "uixTxrIcon_manx"
   },
   "simGameMechPartCost": 365331,
-  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001",
   "Locations": [
     {
       "Location": "Head",
@@ -241,7 +240,7 @@
     },
     {
       "MountedLocation": "LeftTorso",
-      "ComponentDefID": "Special_AddOn_CentrosphericFlywheel",
+      "ComponentDefID": "Special_AddOn_ThermalVision_Mk1",
       "ComponentDefType": "Upgrade",
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
@@ -334,5 +333,6 @@
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
     }
-  ]
+  ],
+  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001"
 }
