--- a/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1035.json
+++ b/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1035.json
@@ -45,7 +45,6 @@
     "Icon": "uixTxrIcon_manx"
   },
   "simGameMechPartCost": 705479,
-  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001",
   "Locations": [
     {
       "Location": "Head",
@@ -249,7 +248,7 @@
     },
     {
       "MountedLocation": "LeftTorso",
-      "ComponentDefID": "Special_AddOn_CentrosphericFlywheel",
+      "ComponentDefID": "Special_AddOn_CoolShot",
       "ComponentDefType": "Upgrade",
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
@@ -387,5 +386,6 @@
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
     }
-  ]
+  ],
+  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001"
 }
