--- a/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1499.json
+++ b/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1499.json
@@ -44,7 +44,6 @@
     "Icon": "uixTxrIcon_manx"
   },
   "simGameMechPartCost": 389942,
-  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001",
   "Locations": [
     {
       "Location": "Head",
@@ -257,7 +256,7 @@
     },
     {
       "MountedLocation": "RightTorso",
-      "ComponentDefID": "Special_AddOn_CentrosphericFlywheelPlus",
+      "ComponentDefID": "Special_AddOn_CoolShot",
       "ComponentDefType": "Upgrade",
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
@@ -383,5 +382,6 @@
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
     }
-  ]
+  ],
+  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001"
 }
