--- a/Optionals/Superheavys/Base/mech/mechdef_manx_MNX-928.json
+++ b/Optionals/Superheavys/Base/mech/mechdef_manx_MNX-928.json
@@ -44,7 +44,6 @@
     "Icon": "uixTxrIcon_manx"
   },
   "simGameMechPartCost": 441606,
-  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001",
   "Locations": [
     {
       "Location": "Head",
@@ -255,7 +254,7 @@
     },
     {
       "MountedLocation": "LeftTorso",
-      "ComponentDefID": "Special_AddOn_CentrosphericFlywheel",
+      "ComponentDefID": "Special_AddOn_AdvancedOptics_Mk1",
       "ComponentDefType": "Upgrade",
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
@@ -351,5 +350,6 @@
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
     }
-  ]
+  ],
+  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001"
 }
