--- a/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1035.json
+++ b/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1035.json
@@ -35,7 +35,7 @@
   },
   "ChassisID": "chassisdef_manx_MNX-1035",
   "Description": {
-    "Cost": 37695440,
+    "Cost": 37303940,
     "Rarity": 0,
     "Purchasable": false,
     "UIName": "Manx MNX-1035",
@@ -45,6 +45,7 @@
     "Icon": "uixTxrIcon_manx"
   },
   "simGameMechPartCost": 705479,
+  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001",
   "Locations": [
     {
       "Location": "Head",
@@ -386,6 +387,5 @@
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
     }
-  ],
-  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001"
+  ]
 }
