--- a/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1042.json
+++ b/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1042.json
@@ -35,7 +35,7 @@
   },
   "ChassisID": "chassisdef_manx_MNX-1042",
   "Description": {
-    "Cost": 31937652,
+    "Cost": 34313652,
     "Rarity": 0,
     "Purchasable": false,
     "UIName": "Manx MNX-1042",
@@ -45,6 +45,7 @@
     "Icon": "uixTxrIcon_manx"
   },
   "simGameMechPartCost": 356181,
+  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001",
   "Locations": [
     {
       "Location": "Head",
@@ -388,6 +389,5 @@
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
     }
-  ],
-  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001"
+  ]
 }
