--- a/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1499.json
+++ b/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1499.json
@@ -34,7 +34,7 @@
   },
   "ChassisID": "chassisdef_manx_MNX-1499",
   "Description": {
-    "Cost": 37830910,
+    "Cost": 36764410,
     "Rarity": 0,
     "Purchasable": false,
     "UIName": "Manx MNX-1499",
@@ -44,6 +44,7 @@
     "Icon": "uixTxrIcon_manx"
   },
   "simGameMechPartCost": 389942,
+  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001",
   "Locations": [
     {
       "Location": "Head",
@@ -382,6 +383,5 @@
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
     }
-  ],
-  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001"
+  ]
 }
