--- a/Optionals/Superheavys/Base/mech/mechdef_manx_MNX-928.json
+++ b/Optionals/Superheavys/Base/mech/mechdef_manx_MNX-928.json
@@ -34,7 +34,7 @@
   },
   "ChassisID": "chassisdef_manx_MNX-928",
   "Description": {
-    "Cost": 36343001,
+    "Cost": 35263001,
     "Rarity": 0,
     "Purchasable": false,
     "UIName": "Manx MNX-928",
@@ -44,6 +44,7 @@
     "Icon": "uixTxrIcon_manx"
   },
   "simGameMechPartCost": 441606,
+  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001",
   "Locations": [
     {
       "Location": "Head",
@@ -350,6 +351,5 @@
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
     }
-  ],
-  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001"
+  ]
 }
