--- a/Optionals/Superheavys/Base/mech/mechdef_manx_MNX-965.json
+++ b/Optionals/Superheavys/Base/mech/mechdef_manx_MNX-965.json
@@ -34,7 +34,7 @@
   },
   "ChassisID": "chassisdef_manx_MNX-965",
   "Description": {
-    "Cost": 35421853,
+    "Cost": 34308103,
     "Rarity": 0,
     "Purchasable": false,
     "UIName": "Manx MNX-965",
@@ -44,6 +44,7 @@
     "Icon": "uixTxrIcon_manx"
   },
   "simGameMechPartCost": 365331,
+  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001",
   "Locations": [
     {
       "Location": "Head",
@@ -333,6 +334,5 @@
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
     }
-  ],
-  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001"
+  ]
 }
