--- a/Optionals/Superheavys/Base/mech/mechdef_manx_MNX-1142.json
+++ b/Optionals/Superheavys/Base/mech/mechdef_manx_MNX-1142.json
@@ -34,7 +34,7 @@
   },
   "ChassisID": "chassisdef_manx_MNX-1142",
   "Description": {
-    "Cost": 36172664,
+    "Cost": 35227664,
     "Rarity": 0,
     "Purchasable": false,
     "UIName": "Manx MNX-1142",
@@ -44,6 +44,7 @@
     "Icon": "uixTxrIcon_manx"
   },
   "simGameMechPartCost": 423064,
+  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001",
   "Locations": [
     {
       "Location": "Head",
@@ -389,6 +390,5 @@
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
     }
-  ],
-  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001"
+  ]
 }
