--- a/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1035.json
+++ b/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1035.json
@@ -45,7 +45,6 @@
     "Icon": "uixTxrIcon_manx"
   },
   "simGameMechPartCost": 705479,
-  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001",
   "Locations": [
     {
       "Location": "Head",
@@ -250,7 +249,7 @@
     {
       "MountedLocation": "LeftTorso",
       "ComponentDefID": "Special_AddOn_CoolShot",
-      "ComponentDefType": "Upgrade",
+      "ComponentDefType": "HeatSink",
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
     },
@@ -387,5 +386,6 @@
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
     }
-  ]
+  ],
+  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001"
 }
