--- a/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1042.json
+++ b/Optionals/ExperimentalWeapons/Superheavys/mech/mechdef_manx_MNX-1042.json
@@ -45,7 +45,6 @@
     "Icon": "uixTxrIcon_manx"
   },
   "simGameMechPartCost": 356181,
-  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001",
   "Locations": [
     {
       "Location": "Head",
@@ -243,7 +242,7 @@
     {
       "MountedLocation": "LeftTorso",
       "ComponentDefID": "Special_AddOn_Exchanger_Clan",
-      "ComponentDefType": "Upgrade",
+      "ComponentDefType": "HeatSink",
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
     },
@@ -389,5 +388,6 @@
       "HardpointSlot": -1,
       "DamageLevel": "Functional"
     }
-  ]
+  ],
+  "prefabOverride": "chrPrfMech_highlander_SLDFBase-001"
 }
