--- a/InstallOptions/WarTechIIC/settings.json
+++ b/InstallOptions/WarTechIIC/settings.json
@@ -1,14 +1,12 @@
 {
-  "debug": true,
-  "trace": true,
   "setActiveFactionsForAllSystems": true,
   "ignoreFactions": [
     "Solaris7",
     "ClansGeneric",
     "NoFaction"
   ],
-  "dailyAttackChance": 0.5,
-  "dailyRaidChance": 0.6,
+  "dailyAttackChance": 0.15,
+  "dailyRaidChance": 0.2,
   "aggression": {
     "NoFaction": 0.0,
     "Marik": 1.5,
@@ -59,32 +57,6 @@
     "ALLIED": 10.0
   },
   "limitTargetsToFactionEnemies": false,
-  "attackMarker": {
-    "useHmAnimation": true,
-    "flashpointPrefix": "",
-    "swapColour": true,
-    "keepAlpha": true,
-    "useOnlyInner": true,
-    "autoDetectContracts": false,
-    "useContractColourOverride": false,
-    "innerCircle": {
-      "Colour": "#8904B1"
-    }
-  },
-  "raidMarker": {
-    "useHmAnimation": true,
-    "flashpointPrefix": "",
-    "swapColour": true,
-    "keepAlpha": true,
-    "useOnlyInner": true,
-    "autoDetectContracts": false,
-    "useContractColourOverride": false,
-    "innerCircle": {
-      "Colour": "#1904B1"
-    }
-  },
-  "minCountdown": 30,
-  "maxCountdown": 45,
   "defaultAttackStrength": 20,
   "defaultDefenseStrength": 15,
   "strengthVariation": 10,
@@ -137,11 +109,16 @@
     "RavenAlliance": 13,
     "Society": 13
   },
+  "maxAttackRaidDistance": 300,
+  "distanceFactor": 75,
+  "dailyExtConChanceIfNoneAvailable": 0,
+  "dailyExtConChanceIfSomeAvailable": 0,
+  "maxAvailableExtendedContracts": 0,
+  "maxExtendedContractDistance": 150,
   "raidStrengthMultiplier": 0.75,
   "minReputationToHelpAttack": "INDIFFERENT",
   "minReputationToHelpRaid": "HATED",
   "wontHirePlayer": [],
-  "daysBetweenMissions": 3,
   "combatForceLossMin": 2,
   "combatForceLossMax": 5,
   "attackBonusPerHalfSkull": 70000,
