--- a/ModTek/config.json
+++ b/ModTek/config.json
@@ -148,7 +148,14 @@
                     "Unity [WARNING] HBS Tooltip on UI Element",
                     "HarmonyX [TRACE]",
                     "HarmonyX [LOG]",
-                    "Unity [ERROR] RenderTexture.Create failed: format unsupported for random writes"
+                    "Unity [ERROR] RenderTexture.Create failed: format unsupported for random writes",
+                    "Unity [WARNING] The referenced script",
+                    "Unity [WARNING] HBS Tooltip on UI Element",
+                    "Unity [ERROR] LanceStat.SetValue had invalid Max value!",
+                    "Unity [WARNING] No DefaultCombatLeaderCastDefId specified for faction",
+                    "<mod> [WARNING] 22:35:53.160  <mod>",
+                    "Unity [ERROR] A scripted object (probably VersionTrackingBreadcrumb?)",
+                    "Unity [WARNING] TerrainCollider: MeshCollider"
                 ],
             "IndentNewLines": true,
             "NormalizeNewLines": true,
