final rto change for season start

--- a/InstallOptions/PersistentMapClient/settings.json
+++ b/InstallOptions/PersistentMapClient/settings.json
@@ -3,8 +3,8 @@
 	"trace" : false,
 	"ServerURL" : "https://161.97.74.91:16001/",
 	"allowSelfSignedCert" : true,
-	"priorityContactPayPercentage": 1.5,
-	"Season": "Rayson05",
+	"priorityContactPayPercentage": 1.6,
+	"Season": "Fallstaff06",
 	"requestTimeout": 25000,
 	"GlobalContractPreserve": [
 		"DefendBase_LastRites",
