--- a/ModTek/config.json
+++ b/ModTek/config.json
@@ -149,13 +149,13 @@
                     "HarmonyX [TRACE]",
                     "HarmonyX [LOG]",
                     "Unity [ERROR] RenderTexture.Create failed: format unsupported for random writes",
-                    "Unity [WARNING] The referenced script",
                     "Unity [WARNING] HBS Tooltip on UI Element",
                     "Unity [ERROR] LanceStat.SetValue had invalid Max value!",
                     "Unity [WARNING] No DefaultCombatLeaderCastDefId specified for faction",
                     "<mod> [WARNING] 22:35:53.160  <mod>",
                     "Unity [ERROR] A scripted object (probably VersionTrackingBreadcrumb?)",
-                    "Unity [WARNING] TerrainCollider: MeshCollider"
+                    "Unity [WARNING] TerrainCollider: MeshCollider",
+                    "EncounterLogic [ERROR] PROBLEM - Can't find [Spawner_PlayerLance.Unit"
                 ],
             "IndentNewLines": true,
             "NormalizeNewLines": true,
