New Lost in Space, fixed RAC5 ammo

--- a/ModTek/config.json
+++ b/ModTek/config.json
@@ -155,7 +155,8 @@
                     "<mod> [WARNING] 22:35:53.160  <mod>",
                     "Unity [ERROR] A scripted object (probably VersionTrackingBreadcrumb?)",
                     "Unity [WARNING] TerrainCollider: MeshCollider",
-                    "EncounterLogic [ERROR] PROBLEM - Can't find [Spawner_PlayerLance.Unit"
+                    "EncounterLogic [ERROR] PROBLEM - Can't find [Spawner_PlayerLance.Unit",
+                    "EncounterLogic [LOG] Avoids a conflicting chunk's objectives"
                 ],
             "IndentNewLines": true,
             "NormalizeNewLines": true,
