--- a/Core/IRTweaks/Menus/CareerDifficultySettings.json
+++ b/Core/IRTweaks/Menus/CareerDifficultySettings.json
@@ -1175,7 +1175,7 @@
           ]
         },
         {
-          "ID": "diff_PP_hard",
+          "ID": "diff_PP_veryhard",
           "Name": "Very Low (150)",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
