ArgoPod upgrade edits
Fix info and incorrect ROI trigger for ArgoPod upgrade

--- a/Core/RGoBoom/items/Gear_Habitats_Galore_Appointment.json
+++ b/Core/RGoBoom/items/Gear_Habitats_Galore_Appointment.json
@@ -19,7 +19,7 @@
     "UIName": "Habitats Galore Argo Pod Upgrade",
     "Id": "Gear_Habitats_Galore_Appointment",
     "Name": "Habitats Galore Argo Pod Upgrade",
-    "Details": "This appointment will send one of our trusted <i>Habitats Galore, a Boeing Interstellar Subsidiary,</i> sales representatives who will happily come to you and discuss the various options for upgrading your dropship to include cozy living quarters for your future addtional crew.  All we ask for is a small deposit to cover our travel costs to you in orbit.\r\n\r\n<color=#FF0000><i>This item is for Argo upgrade only, it will not install in mechs</i></color>",
+    "Details": "This appointment will send one of our trusted <i>Habitats Galore, a Boeing Interstellar Subsidiary,</i> sales representatives who will happily come to you and discuss the various options for upgrading your dropship to include cozy living quarters for your future additional crew.  All we ask for is a small deposit to cover our travel costs to you in orbit.  Our minimum install rate is currently ¢400,000 for our Cost Saver package.\r\n\r\n<color=#FF0000><i>This item is for Argo upgrade only, it will not install in mechs</i></color>",
     "Icon": "uixSvgIcon_ROI_shipUpgrade_pod"
   },
   "BonusValueA": "",
