--- a/Core/ResultOrientedItems/itemEvents/ROI_Habitats_Galore_Appointment.json
+++ b/Core/ResultOrientedItems/itemEvents/ROI_Habitats_Galore_Appointment.json
@@ -8,8 +8,8 @@
 		            {
 		                "obj" : "Funds",
 		                "op" : "GreaterThanOrEqual",
-		                "val" : 1000000,
-		                "valueConstant" : "100000"
+		                "val" : 400000,
+		                "valueConstant" : "400000"
 		            }
 		        ]
 		}
