Changes to Area Raycasting
Raycasting disabled for most weapons, Raycasting enabled in individual weapondefs for artillery, nukes and bombs with an especailly large are of effect. Some other heightcasting tweaks.

Miss radius of Bay/WM arrows tightened slightly, the large radius + unguided animation caused visual/practical issues.

--- a/Core/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
+++ b/Core/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
@@ -355,9 +355,9 @@
 	"AIPathingOptimization": true,
 	"AIPathingSamplesLimit": 120,
 	"AIPathingMultithread": false,
-	"PhysicsAoE_Weapons": true,
+	"PhysicsAoE_Weapons": false,
 	"PhysicsAoE_Deffered": true,
-	"PhysicsAoE_Minefield": true,
+	"PhysicsAoE_Minefield": false,
 	"PhysicsAoE_API": true,
 	"RemoveToHitModifiers": [
 		"DAMAGED"
