Fixed pilot upkeep descriptions

--- a/Core/MechAffinity/RtoQuirkDefs/pilotQuirkDef_pilot_lutefiskLaunchers.json
+++ b/Core/MechAffinity/RtoQuirkDefs/pilotQuirkDef_pilot_lutefiskLaunchers.json
@@ -2,7 +2,7 @@
   "id": "pilotQuirkDef_pilot_lutefiskLaunchers",
   "tag": "pilot_lutefiskLaunchers",
   "quirkName": "LuteFisk Launchers",
-  "description": "ScatterRadiusMod: -25%, -50% +20% Upkeep",
+  "description": "ScatterRadiusMod: -25%, -50% +35% Pilot Upkeep",
   "effectData": [
     {
       "durationData": {
