--- a/Core/Abilifier/AbilityRealizerSettings.json
+++ b/Core/Abilifier/AbilityRealizerSettings.json
@@ -55,7 +55,8 @@
 			"TamarindAbbey": ["TraitMarik"],
 			"Kurita": ["TraitKurita"],
 			"Rasalhague": ["TraitKurita"],
-			"WordOfBlake": ["TraitWobbie"]
+			"WordOfBlake": ["TraitWobbie"],
+			"ShadowDivisions": ["TraitWobbie"]
 		},
         "TagAbilities": {
 			"pilot_ar_abilities":["AbilityDef_FirstAid", "AbilityDef_CarefulManeuvers", "AbilityDef_AAStance"],
