AOE vs Squads and vTOL test
Range multiplier vs VTOL is attempt to fix Airburst mortars

damage multiplier vs squads is because they don't seem to scale AOE per member at all?

--- a/Core/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
+++ b/Core/CustomAmmoCategories/CustomAmmoCategoriesSettings.json
@@ -243,16 +243,20 @@
 	},
 	"TagAoEDamageMult": {
 		"unit_battlearmor": {
-			"Range": 1.0,
-			"Damage": 1.0
+			"Range": 0.8,
+			"Damage": 2.0
 		},
 		"unit_protomech": {
-			"Range": 1.0,
-			"Damage": 1.0
+			"Range": 0.8,
+			"Damage": 2.0
+		},
+		"unit_mechsquad": {
+			"Range": 0.9,
+			"Damage": 2.0
 		},
 		"unit_vtol": {
-			"Range": 1.0,
-			"Damage": 1.10
+			"Range": 2.0,
+			"Damage": 1.0
 		},
 		"aoe_increased_minor": {
 			"Range": 1.2,
