--- a/Core/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
+++ b/Core/RogueModuleTech/Weapons/Weapon_VehicleGrenadeLauncher.json
@@ -9,6 +9,7 @@
       "Indirect",
       "NoAA",
       "IsMortar",
+      "DFAccuracy: -1",
       "WeaponShardsModRange: 0.3, 1.2"
     ],
     "Flags": [
@@ -41,6 +42,7 @@
   "OverheatedDamageMultiplier": 0,
   "EvasiveDamageMultiplier": 0,
   "CriticalChanceMultiplier": 0.6,
+  "DirectFireModifier": 1,
   "APArmorShardsMod": 3,
   "APCriticalChanceMultiplier": 0.03,
   "MissInCircle": true,
