--- a/Core/MechEngineer/Settings.json
+++ b/Core/MechEngineer/Settings.json
@@ -1202,7 +1202,7 @@
 			},
 			{
 				"PrefabIdentifier": "mml3",
-				"HarpointCandidates": [
+				"HardpointCandidates": [
 					"mml3",
 					"srm2",
 					"missile2",
@@ -1226,7 +1226,7 @@
 			},
 			{
 				"PrefabIdentifier": "mml5",
-				"HarpointCandidates": [
+				"HardpointCandidates": [
 					"mml5",
 					"lrm5",
 					"missile5",
@@ -1250,7 +1250,7 @@
 			},
 			{
 				"PrefabIdentifier": "mml7",
-				"HarpointCandidates": [
+				"HardpointCandidates": [
 					"mml7",
 					"srm6",
 					"missile6",
@@ -1275,7 +1275,7 @@
 			},
 			{
 				"PrefabIdentifier": "mml9",
-				"HarpointCandidates": [
+				"HardpointCandidates": [
 					"mml9",
 					"lrm10",
 					"missile10",
