--- a/Core/Vehicle Pilots/pilot/pilot_Happy.json
+++ b/Core/Vehicle Pilots/pilot/pilot_Happy.json
@@ -8,7 +8,7 @@
     "Gender": "Male",
     "Faction": "NoFaction",
     "Age": 32,
-    "Details": "All people know about this man is that he always smiles.",
+    "Details": "All people know about this man is that he always smiles.\n\n",
     "Icon": "pilot_Happy"
   },
   "BaseGunnery": 3,
