--- a/Optionals/Flashpoints/LV426/abilities/AbilityDefCMD_SpawnXenoSwarm.json
+++ b/Optionals/Flashpoints/LV426/abilities/AbilityDefCMD_SpawnXenoSwarm.json
@@ -9,6 +9,7 @@
   "Resource": "CommandAbility",
   "ActivationCooldown": 1,
   "NumberOfUses": 3,
+  "StartInCooldown": true,
   "Targeting": "CommandSpawnPosition",
   "ActorResource": "mechdef_xeno_swarm",
   "StringParam1": "Swarm Deployment Unavailable",
