Rename starting company type so they all fit on a single line; resize Guillotine, Wolfhound, Firestarter

--- a/Core/IRTweaks/Menus/CareerDifficultySettings.json
+++ b/Core/IRTweaks/Menus/CareerDifficultySettings.json
@@ -2772,7 +2772,7 @@
         },
         {
           "ID": "diff_ClanBA",
-          "Name": "Clan Elemental",
+          "Name": "Cl. Elemental",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0,
@@ -2844,7 +2844,7 @@
         },
         {
           "ID": "diff_Delphi",
-          "Name": "Delphi Compact",
+          "Name": "Delphi Comp.",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0,
@@ -3588,7 +3588,7 @@
         },
         {
           "ID": "diff_Wobbles",
-          "Name": "Word Of Blake",
+          "Name": "WordOfBlake",
           "TelemetryEventDesc": "",
           "DifficultyValue": 0,
           "CareerScoreModifier": 0,
