FreshMechwarriors pack fixes

--- a/InstallOptions/Pilots/FreshMechwarriors/pilot/pilot_Kel_Snowborn.json
+++ b/InstallOptions/Pilots/FreshMechwarriors/pilot/pilot_Kel_Snowborn.json
@@ -8,7 +8,7 @@
     "Gender": "Male",
     "Faction": "NoFaction",
     "Age": 37,
-    "Details": " Kel Snowborn aka \"Gunrunner\" is an ex bounty hunter from the mercenary group DDI. After a shady deal went bad he was forced into hiding and left the spacer life. Three years later Kel remerged as a MechWarrior running a small operation of mercs. Aggressive and intelligent, Kel seems to have a gift in his ability to adapt quickly to any tactical situation and is a dangerous asset to any Lance.   \n\n ",
+    "Details": "Kel Snowborn, aka \"Gunrunner\", is an ex-bounty hunter from the mercenary group DDI. After a shady deal went bad, he was forced into hiding and left the spacer life. Three years later Kel re-emerged as a MechWarrior, running a small mercenary operation. Aggressive and intelligent, Kel seems to have a gift in his ability to adapt quickly to any tactical situation, and he is a dangerous asset to any lance.\n\n",
     "Icon": "pilot_Kel_Snowborn"
   },
   "BaseGunnery": 4,
